docs: enhance module documentation and comments

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "extensions-ci": "node ./node_modules/gulp/bin/gulp.js extensions-ci",
     "extensions-ci-pr": "node ./node_modules/gulp/bin/gulp.js extensions-ci-pr",
     "perf": "node scripts/code-perf.js",
-    "update-build-ts-version": "npm install typescript@next && tsc -p ./build/tsconfig.build.json"
+    "update-build-ts-version": "npm install typescript@next && tsc -p ./build/tsconfig.build.json",
+    "gen:project-structure": "cd /home/ali/projects/oss/vscode/src && tree --gitignore -P '*.ts' -P '*.json' -I '*.test.ts' --prune > /home/ali/projects/oss/vscode/project_structure.md"
   },
   "dependencies": {
     "@c4312/eventsource-umd": "^3.0.5",
