--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,13 +2,30 @@
 	"extends": "./tsconfig.base.json",
 	"compilerOptions": {
 		"esModuleInterop": true,
-		"removeComments": false,
+		"removeComments": true,
 		"preserveConstEnums": true,
 		"sourceMap": false,
-		"allowJs": true,
+		"allowJs": false,
 		"resolveJsonModule": true,
 		"isolatedModules": false,
 		"outDir": "../out/vs",
+		"noUncheckedIndexedAccess": true,
+		"strict": true,
+		"noImplicitOverride": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictPropertyInitialization": true,
+		"noImplicitThis": true,
+		"useUnknownInCatchVariables": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"exactOptionalPropertyTypes": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
 		"types": [
 			"@webgpu/types",
 			"mocha",
